# go_amd_smi

./: README.md  goamdsmi.go
goamdsmi_shim/: CMakeLists.txt  amd_smi.cmake
goamdsmi_shim/amdsmi/: amdsmi_go_shim.c  amdsmi_go_shim.h
goamdsmi_shim/esmi/: esmi_go_shim.c  esmi_go_shim.h
goamdsmi_shim/goamdsmi/: CMakeLists.txt  goamdsmi.h  goamdsmi_shim.c  goamdsmi_shim.h
goamdsmi_shim/rsmi/: rocm_smi_go_shim.c  rocm_smi_go_shim.h
